--- a/fullstackweek-barber/.env
+++ b/fullstackweek-barber/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:wmith87xalju28@localhost:5432/barber-db?schema=public"
+DATABASE_URL=secret key
